--- a/clang/lib/StaticAnalyzer/Checkers/CMakeLists.txt
+++ b/clang/lib/StaticAnalyzer/Checkers/CMakeLists.txt
@@ -137,6 +137,8 @@ add_clang_library(clangStaticAnalyzerCheckers
   WebKit/UncountedLocalVarsChecker.cpp
   OpenHarmony/UnixAPIArgsChecker.cpp
   OpenHarmony/MemcpyChecker.cpp
+  OpenHarmony/PrintSensitiveInfoChecker.cpp
+  OpenHarmony/SignalHandlerChecker.cpp
 
   LINK_LIBS
   clangAST
