feat: add SignalHandlerChecker and PrintSensitiveInfoChecker
SignalHandlerChecker checks for calling non-async-function within a signal handler function.

PrintSensitiveInfoChecker checks for sensitive information leak.

Signed-off-by: Hongjin Li <lihongjin1@huawei.com>

--- a/clang/lib/StaticAnalyzer/Checkers/CMakeLists.txt
+++ b/clang/lib/StaticAnalyzer/Checkers/CMakeLists.txt
@@ -131,6 +131,8 @@ add_clang_library(clangStaticAnalyzerCheckers
   WebKit/UncountedLocalVarsChecker.cpp
   OpenHarmony/UnixAPIArgsChecker.cpp
   OpenHarmony/MemcpyChecker.cpp
+  OpenHarmony/PrintSensitiveInfoChecker.cpp
+  OpenHarmony/SignalHandlerChecker.cpp
 
   LINK_LIBS
   clangAST
